# MVV1

./: .gitattributes  .gitignore  LICENSE  Lec18-graph-cuts.v1.pptx  README.md  audio_sync.m  cleanup_steps.txt  custom.cpp  error_codes.txt  license.txt  readme.txt  readme_v1.txt  settings.ini  test.cpp  test2.cpp  todo.txt
akaze-cpuidentity/: .gitignore  CMakeLists.txt  README.md
akaze-cpuidentity/python/: CMakeLists.txt  python_bindings.cpp  test.py
akaze-cpuidentity/src/: CMakeLists.txt  akaze_compare.cpp  akaze_features.cpp  akaze_match.cpp
akaze-cpuidentity/src/lib/: AKAZE.cpp  AKAZE.h  AKAZEConfig.h  cuda_akaze.cu  cuda_akaze.h  nldiffusion_functions.cpp  utils.cpp
core/src/CppTutorials/: CppTutorials.sln
core/src/akaze_features/: akaze_features.sln
core/src/akaze_vc12/: akaze_vc12.sln
core/src/mvv_trial/: mvv_trial.sln
core/src/opencv_setup_testing/: image_verifier.cpp
cuda_demo/: cuda_demo.sln
cuda_demo/Debug/: cuda_demo.ilk  openGL_demo.ilk
cuda_demo/cuda_demo/: bestiary.txt  binary_io.h  cuda_demo.vcxproj  kernel.cu
cuda_demo/cuda_demo/Debug/: kernel.cu.deps
cuda_demo/cuda_interop/: cuda_interop.cu  cuda_interop.vcxproj  video_kernel.cu  video_kernel.h
cuda_demo/cuda_interop/contexts/: loader_context.cpp  loader_context.h  menu_context.cpp  menu_context.h  video_context.cpp  video_context.h
cuda_demo/data_store/buildings/: where_from.txt
cuda_demo/data_store/epfl-gims08/: bbox_06.txt  bbox_07.txt  bbox_08.txt  bbox_09.txt  bbox_10.txt  bbox_12.txt  bbox_14.txt  bbox_17.txt  bbox_18.txt  bbox_19.txt  bbox_20.txt  explanations.txt  times.txt  times_03.txt  times_04.txt  times_05.txt  times_06.txt  times_09.txt  times_12.txt  times_14.txt  times_15.txt  times_17.txt  tripod-seq.txt
cuda_demo/enc_temp_folder/83a6de721270339c421b8f801470ae7/: kernel.cu
cuda_demo/enc_temp_folder/8d9c5390a212d40f5aca8e30e148/: kernel.cu
cuda_demo/io_demo/: ReadMe.txt  io_demo.cpp  io_demo.vcxproj  stdafx.cpp
cuda_demo/mvv_player/: core.cpp  mvv_player.vcxproj
cuda_demo/openGL_demo/: binary_io.h  interactions.h  kernel.cu  main.cpp  openGL_demo.vcxproj
cuda_demo/openGL_demo/Debug/: kernel.cu.deps
cuda_demo/simpleGL_v2/: binary_io.h  helper_cuda.h  helper_string.h  kernel.cu  simpleGL.cu  simpleGL_v2.vcxproj
cuda_demo/udacity_hw1/: kernel.cu  udacity_hw1.vcxproj
cuda_demo/x64/Debug/: cuda_demo.ilk  cuda_interop.ilk  io_demo.ilk  openGL_demo.ilk  simpleGL_v2.exp  simpleGL_v2.ilk
cuda_demo/x64/Release/: cuda_interop.iobj  cuda_interop.ipdb
cuda_pre/: Copy.txt  cuda_pre.sln  cuda_pre.vcxproj  kernel.cu
cuda_pre/enc_temp_folder/519deb1c2460dd64d59dea2df242da32/: kernel.cu
cuda_preprocessing/: cuda_preprocessing.sln  cuda_preprocessing.vcxproj  kernel.cu
data_store/: settings.ini
data_store/audio/: audio_detect.m
data_store/flash/: flash_2.MP4.lvix
docs/: akaze_mva_spec.txt  akaze_requirements.txt  business_plan_v1.odt  cuda_interpolation  cuda_opengl_setup.txt  ffmpeg commands.txt  libraries_and_headers.txt  license_information.txt  mvv_filespec.txt  mvv_specification_v100.txt  style.txt  summer_2017_plan  todo.txt  visual_studio_setup.odt  visual_studio_setup.txt
docs/mvv_player/: mvv_player_specification.txt
docs/papers/: [A._Seidenberg]_Lectures_in_Projective_Geometry(b-ok.org).djvu
fucking_around_with_opt_flow/: ReadMe.txt  fucking_around_with_opt_flow.cpp  fucking_around_with_opt_flow.vcxproj  stdafx.cpp
gpu_akaze/: gpu_akaze.sln  gpu_akaze.vcxproj  gpu_akaze_kernel_v1.cu  kernel.cu
graphics/: icon.cdr  ~con.tmp
include/: binary_read.h  binary_write.h  global_config.h
libs/: libs.7z
libs/cuda/include/: fake_types.h
more_stupidity/: kernel.cu  more_stupidity.sln  more_stupidity.vcxproj
mvv_demo/: Output-Debug.txt  mvv_demo.sln
mvv_demo/build_geometry/: ReadMe.txt  build_geometry.cpp  build_geometry.h  build_geometry.vcxproj  generate_test_points.cpp  generate_test_points.h
mvv_demo/construct_geometry/: ReadMe.txt  construct_geometry.cpp  construct_geometry.h  construct_geometry.vcxproj  generate_test_points.cpp  generate_test_points.h  stdafx.cpp
mvv_demo/core/: MatchedFeature.cpp  MatchedFeature.h  ReadMe.txt  binary_io.cpp  binary_io.h  core.cpp  core.vcxproj  flash_detection.cpp  flash_detection.h  merge_background.cpp  merge_background.h  mvv_iostream.cpp  mvv_iostream.h  stdafx.h  user_debug.txt  video_preprocessing.cpp  video_preprocessing.h
mvv_demo/data_store/csv/: triangles.csv
mvv_demo/data_store/epfl-gims08/: bbox_01.txt  bbox_02.txt  bbox_03.txt  bbox_04.txt  bbox_05.txt  bbox_11.txt  bbox_13.txt  bbox_15.txt  bbox_16.txt  times_01.txt  times_02.txt  times_07.txt  times_08.txt  times_10.txt  (+6 more)
mvv_demo/gpu_match_points/: gpu_match_points.vcxproj  kernel.cu
mvv_demo/gpu_wrapper/: gpu_wrapper.vcxproj  kernel.cu
mvv_demo/interpolate_images/: ReadMe.txt  interpolate_images.cpp  interpolate_images.h  interpolate_images.vcxproj  polygon_raster.cpp  polygon_raster.h  rasterize_triangle.cpp  rasterize_triangle.h  stdafx.cpp
mvv_demo/match_features/: ReadMe.txt  affine_akaze.cpp  affine_akaze.h  background_substraction.cpp  background_substraction.h  bestiary.txt  good_features.cpp  good_features.h  knn_test.cpp  knn_test.h  match_features.vcxproj  match_points.cpp  match_points.h  optical_flow.cpp  optical_flow.h  resource.h  template_matching_test.cpp
mvv_demo/match_points/: UncleanedVersion1.txt  goodPointsTrackbar.h  harris_corners_opencv.cpp  match_points.cpp  match_points.vcxproj
mvv_demo/opencv_setup3/: ReadMe.txt  opencv_setup3.cpp  opencv_setup3.vcxproj  opencv_setup3.vcxproj.filters  stdafx.cpp
mvv_validate/: mvv_validate.sln
mvv_validate/mvv_validate/: ReadMe.txt  mvv_validate.cpp  mvv_validate.vcxproj  stdafx.cpp
openGL_setup/: kernel.cuh  main.cpp  openGL_setup.sln  openGL_setup.vcxproj
prepros/: ReadMe.txt  prepros.cpp  prepros.sln  prepros.vcxproj  stdafx.cpp
spx_demo/: ReadMe.txt  spx_demo.cpp  spx_demo.sln  spx_demo.vcxproj  stdafx.cpp
spx_demo/spx_stats/: ReadMe.txt  spx_stats.cpp  spx_stats.vcxproj  stdafx.cpp
spx_stats/: spx_stats.cpp  spx_stats.vcxproj
(+103 files in other folders)
